# github_repo_analyzer

./: LICENSE  README.md  pyproject.toml
src/: analyze.py  constants.py  main.py
tests/: test_analyze.py
