[tool.poetry]
package-mode = false

[project]
name = "github-repo-analyzer"
version = "0.1.0"
description = "A GitHub repository analyzer"
authors = [
    {name = "Kim Reddington", email="kimreddington@gmail.com"}
]

license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pylint (>=3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.pylint.main]
source-roots = "src/"